--- a/src/htdocs/css/_typography.scss
+++ b/src/htdocs/css/_typography.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-	font-size:1.5rem;
+	font-size:1.6rem;
 	line-height:1.5;
 	font-family:'helvetica neue', arial, sans-serif;
 }
@@ -38,13 +38,4 @@ h5 {
 
 h6 {
 	font-size: 0.875em;
-}
-
-
-// Leave this at 768px even though the grid stacks at 560px
-@media screen and (min-width: $breakpoint-offcanvas) {
-
-	body {
-		font-size:1.6rem;
-	}
 }
